--- a/html_note.html
+++ b/html_note.html
@@ -10,6 +10,13 @@
 	     <li>start is < !-- </li>
 	     <li>end is --> </li>
 	   </ul>
+	   <h2>list</h2>
+	   <ul>
+	     <li>ul</li>   
+      	   </ul>
+           <ol>
+   	     <li>ol</li>
+           </ol>
 	</body>
 
 </html>
