add switch graphic approach

--- a/Linux/index.html
+++ b/Linux/index.html
@@ -38,6 +38,13 @@
                     </a>
                 </h2>
             </li>
+            <li>
+                <h2>
+                    <a href="./html/nvidia.html">
+                        Nvidia
+                    </a>
+                </h2>
+            </li>
         </ul>
         
     </body>
