add check cpu temp cmd

--- a/Linux/index.html
+++ b/Linux/index.html
@@ -45,6 +45,13 @@
                     </a>
                 </h2>
             </li>
+            <li>
+                <h2>
+                    <a href="./html/other.html">
+                        Other
+                    </a>
+                </h2>
+            </li>
         </ul>
         
     </body>
